@@ -23,3 +23,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+test {
+// previous JVM options
+    jvmArgs("-noverify", "-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage") // add this
+}
